# tuf-conformance

./: .gitignore  CLIENT-CLI.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/scripts/: generate_client_report.py
.github/workflows/: ci.yml  publish-report.yml
clients/: README.md  python_tuf.py
clients/go-tuf/: go-tuf.xfails  go.mod  go.sum  main.go
clients/go-tuf-metadata/: .gitignore  go.mod  go.sum  main.go
clients/go-tuf-metadata/cmd/: download.go  refresh.go  root.go
clients/go-tuf/cmd/: download.go  init.go  refresh.go  root.go
clients/python-tuf/: python_tuf.py
self_tests/: test_repository_simulator.py
tuf_conformance/: __init__.py  client_runner.py  conftest.py  metadata.py  repository_simulator.py  run_tests.py  simple_server.py  simulator_server.py  test_basic.py  test_expiration.py  test_file_download.py  test_keys.py  test_quoting_issues.py  test_repository_simulator.py  test_rollback.py  test_static_repositories.py  test_updater_delegation_graphs.py  test_updater_key_rotations.py  utils.py
tuf_conformance/_internal/: client_runner.py  repository_simulator.py  simulator_server.py  utils.py
tuf_conformance/static_data/: README.md
tuf_conformance/static_data/sigstore-root-signing/: README.md  faketime  targetpath
tuf_conformance/static_data/tuf-on-ci-0.11/: README.md  faketime  initial_root.json  targetpath
tuf_conformance/static_data/tuf-on-ci-0.11/metadata/: 1.targets.json  2.delegatedrole.json  2.snapshot.json  index.html  index.md  timestamp.json
