[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuf-conformance"
dependencies = [
    "securesystemslib[crypto, pynacl]==1.1.0" ,
    "tuf==5.0.0",
    "pytest==8.3.2"
]
dynamic = ["version"]

[project.optional-dependencies]
lint = [
    "mypy==1.11.1",
    "ruff==0.5.6"
]

[tool.hatch.version]
path = "tuf_conformance/__init__.py"

[[tool.mypy.overrides]]
module = ["securesystemslib.*"]
ignore_missing_imports = "True"

[tool.ruff]
lint.select = ["ANN", "E", "F", "I", "N", "S", "UP", "W",]
lint.ignore = [
    "ANN101", "ANN102", # nonsense, deprecated in ruff
    "S101", # assert is fine in pytest tests
]