[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuf-conformance"
dependencies = [
    "securesystemslib[crypto]==1.2.0",
    "tuf==5.1.0",
    "pytest==8.3.4"
]
dynamic = ["version"]
requires-python = ">= 3.10"

[project.optional-dependencies]
lint = [
    "mypy==1.15.0",
    "ruff==0.9.6"
]

[tool.hatch.version]
path = "tuf_conformance/__init__.py"

[tool.mypy]
check_untyped_defs = "True"
disallow_untyped_defs = "True"
no_implicit_optional = "True"
warn_return_any = "True"
warn_unreachable = "True"
warn_unused_ignores = "True"

[[tool.mypy.overrides]]
module = ["securesystemslib.*"]
ignore_missing_imports = "True"

[tool.ruff]
lint.select = ["ANN", "DTZ", "E", "F", "FA", "I", "N", "PIE", "PL", "PYI", "RET", "RUF", "S", "SIM", "UP", "W",]
lint.ignore = [
    "S101",             # assert is fine in pytest tests
    "PLR2004",          # magic values are ok in a test suite
]
